testsuite/tests/checks/others_in_case/test.out
other.adb:8:12: error: OTHERS choice in case statement
8 |       when others =>        --  FLAG
  |            ^^^^^^ 

